# auracube

./: CMakeLists.txt  Cargo.toml  README.md  gamma.py  openocd.cfg
.cargo/: config
src/: config.rs  main.rs
src/audio/: mod.rs  sampler.rs  spectrum.rs
src/led/: display.rs  gamma.rs  matrix.rs  mod.rs
src/storage/: mod.rs
