[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "auracube"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "0.3.5"
chfft = { git = "https://github.com/dflemstr/chfft.git", default-features = false, features = ["libm"] }
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = {git = "https://github.com/rtfm-rs/cortex-m-rtfm.git"}
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"
num-complex = { version = "0.2.3", default-features = false }
num-traits = { version = "0.2.8", default-features = false }
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.6.0", features = ["stm32f407", "rt"] }

# this lets you use `cargo fix`!
[[bin]]
name = "auracube"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[patch.crates-io]
num-traits = { git = "https://github.com/rust-num/num-traits.git" }
